<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/_16dp"
    android:orientation="vertical"
    tools:context=".activity.RegisterActivity">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_create"
        android:textSize="@dimen/_60sp"
        android:textColor="@android:color/black"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_account"
        android:textSize="@dimen/_60sp"
        android:textColor="@android:color/black"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/let_s_start"
        android:textSize="@dimen/_20sp"
        android:textColor="@android:color/black"
    />

    <EditText
        android:id="@+id/et_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_40dp"
        android:layout_marginTop="@dimen/_70dp"
        android:layout_marginEnd="@dimen/_40dp"
        android:drawableStart="@drawable/ic_acc"
        android:drawablePadding="@dimen/_20dp"
        android:hint="@string/txt_username"
        android:inputType="textEmailAddress"
        />
    <EditText
        android:id="@+id/et_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_40dp"
        android:layout_marginTop="@dimen/_10dp"
        android:layout_marginEnd="@dimen/_40dp"
        android:drawableStart="@drawable/ic_envelope"
        android:drawablePadding="@dimen/_20dp"
        android:hint="@string/txt_email"
        android:inputType="textEmailAddress"
        />
    <EditText
        android:id="@+id/et_pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_40dp"
        android:layout_marginTop="@dimen/_10dp"
        android:layout_marginEnd="@dimen/_40dp"
        android:drawableStart="@drawable/ic_pass"
        android:drawablePadding="@dimen/_20dp"
        android:hint="@string/txt_password"
        android:inputType="textPassword"
        />
    <EditText
    android:id="@+id/et_con_pass"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="@dimen/_40dp"
    android:layout_marginTop="@dimen/_10dp"
    android:layout_marginEnd="@dimen/_40dp"
    android:drawableStart="@drawable/ic_pass"
    android:drawablePadding="@dimen/_20dp"
    android:hint="@string/txt_confirm_password"
    android:inputType="textPassword"
    />
    <Button
        android:id="@+id/btn_login"
        android:layout_width="@dimen/_250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/_20dp"
        android:text="@string/txt_register"
        android:background="@drawable/button_rounded"
        android:textColor="@android:color/white"
        android:textSize="@dimen/_20sp"
        android:textAllCaps="false"
        />
</LinearLayout>