<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical"
    android:layout_margin="@dimen/_16dp"
    tools:context=".activity.LoginActivity">

    <ImageView
        android:id="@+id/iv_login"
        android:layout_width="@dimen/_280dp"
        android:layout_height="@dimen/_280dp"
        android:layout_gravity="center_horizontal"
        android:contentDescription="@string/image_view"
        android:src="@drawable/img_login"
        />
    <EditText
        android:id="@+id/et_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_40dp"
        android:layout_marginTop="@dimen/_30dp"
        android:layout_marginEnd="@dimen/_40dp"
        android:drawableStart="@drawable/ic_envelope"
        android:drawablePadding="@dimen/_20dp"
        android:hint="@string/txt_email"
        android:inputType="textEmailAddress"
        />
    <EditText
        android:id="@+id/et_pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_40dp"
        android:layout_marginEnd="@dimen/_40dp"
        android:drawableStart="@drawable/ic_pass"
        android:drawablePadding="@dimen/_20dp"
        android:hint="@string/txt_password"
        android:inputType="textPassword"
        />
    <Button
        android:id="@+id/btn_login"
        android:layout_width="@dimen/_250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/_20dp"
        android:text="@string/log_in"
        android:background="@drawable/button_rounded"
        android:textColor="@android:color/white"
        android:textSize="@dimen/_20sp"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/_20dp">
        <TextView
            android:id="@+id/tv_verif"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/don_t_have_an_account"
            />
        <TextView
            android:id="@+id/tv_create"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_8dp"
            android:text="@string/txt_create"
            android:textStyle="bold"
            />
    </LinearLayout>
</LinearLayout>

